<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="@dimen/_8dp"
    android:background="@color/black"
    tools:context=".ui.search.SearchFragment">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            android:fontFamily="@font/avenir_next_ltpro_bold"
            android:text="@string/txt_search"
            android:textColor="@color/white"
            android:textSize="@dimen/_25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_line_1_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.10123119" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/bg_edit_search"
            android:drawableStart="@drawable/ic_search"
            android:fontFamily="sans-serif-condensed-medium"
            android:hint="@string/txt_search_default"
            android:inputType="text"
            android:paddingHorizontal="@dimen/_8dp"
            android:textColorHint="#131313"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guide_line_1_search"
            tools:ignore="Autofill,VisualLintTextFieldSize" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_line_4_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.19" />

        <TextView
            android:id="@+id/tv_label_browse_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenir_next_ltpro_bold"
            android:text="@string/txt_browse_all"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guide_line_4_search" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewBrowseAll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_label_browse_all" />



</androidx.constraintlayout.widget.ConstraintLayout>