<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.MainActivity">


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/black"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        app:menu="@menu/bottom_nav_menu" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="73dp" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment_container"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@+id/menu"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/nav_graph" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_8dp"
        android:layout_marginBottom="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/menu"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btn_close_bottom_sheet"
            android:layout_width="@dimen/_24dp"
            android:layout_height="@dimen/_24dp"
            android:background="@drawable/ic_arrow_down"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btn_more"
            android:layout_width="@dimen/_24dp"
            android:layout_height="@dimen/_24dp"
            android:background="@drawable/ic_more"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_artist_in_full_bottom_sheet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenir_next_ltpro_bold"
            android:text="@string/_1_remastered"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_close_bottom_sheet"
            app:layout_constraintEnd_toEndOf="@+id/btn_more"
            app:layout_constraintStart_toStartOf="@+id/btn_close_bottom_sheet"
            app:layout_constraintTop_toTopOf="@+id/btn_close_bottom_sheet" />



        <ImageView
            android:id="@+id/img_artist"
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:background="@drawable/img_artis"
            android:contentDescription="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_more"
            android:layout_marginTop="@dimen/_16dp"
            />

        <TextView
            android:id="@+id/tv_title_song_in_full_bottom_sheet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:ellipsize="end"
            android:fontFamily="@font/avenir_next_ltpro_bold"
            android:text="@string/txt_title_default"
            android:textColor="@color/white"
            android:textSize="@dimen/_22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_artist"

            />

        <TextView
            android:id="@+id/tv_name_song"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenirnextltpro_mediumcn"
            android:text="@string/txt_name_song_default"
            android:textColor="#B3B3B3"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/tv_title_song_in_full_bottom_sheet"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_song_in_full_bottom_sheet" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_heart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_song_in_full_bottom_sheet" />

        <RelativeLayout
            android:id="@+id/play_music_layout"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_pause_or_play_music"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name_song"
            app:layout_constraintVertical_bias="0.3">

            <SeekBar
                android:id="@+id/seek_bar_in_full_bottom_sheet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:max="100"
                android:progress="29"
                android:thumb="@drawable/circle_thumb" />

            <TextView
                android:id="@+id/tv_time_live_song"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/seek_bar_in_full_bottom_sheet"
                android:layout_alignParentStart="true"
                android:layout_marginTop="@dimen/_4dp"
                android:fontFamily="@font/avenirnextltpro_mediumcn"
                android:text="@string/txt_time_song_default"
                android:textColor="#B2B2B2"
                android:textSize="@dimen/_10sp" />

            <TextView
                android:id="@+id/tv_time_song"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/seek_bar_in_full_bottom_sheet"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/_4dp"
                android:fontFamily="@font/avenirnextltpro_mediumcn"
                android:text="@string/txt_time_song"
                android:textColor="#B2B2B2"
                android:textSize="@dimen/_10sp" />
        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatImageView

            android:id="@+id/btn_pause_or_play_music"
            android:layout_width="67dp"
            android:layout_height="67dp"
            android:layout_marginTop="@dimen/_4dp"
            android:background="@drawable/ic_pause"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/play_music_layout" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            android:background="@drawable/ic_next_music"
            app:layout_constraintBottom_toBottomOf="@+id/btn_pause_or_play_music"
            app:layout_constraintStart_toEndOf="@+id/btn_pause_or_play_music"
            app:layout_constraintTop_toTopOf="@+id/btn_pause_or_play_music" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16dp"
            android:background="@drawable/ic_skip_previous"
            app:layout_constraintBottom_toBottomOf="@+id/btn_pause_or_play_music"
            app:layout_constraintEnd_toStartOf="@+id/btn_pause_or_play_music"
            app:layout_constraintTop_toTopOf="@+id/btn_pause_or_play_music" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_repeat_song"
            app:layout_constraintBottom_toBottomOf="@+id/btn_pause_or_play_music"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_pause_or_play_music" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:background="@drawable/ic_shuffle_song"
            app:layout_constraintBottom_toBottomOf="@+id/btn_pause_or_play_music"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_pause_or_play_music" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/layout_play_music"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_59dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_bottom_sheet"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/menu"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_single"
            android:layout_width="@dimen/_37dp"
            android:layout_height="@dimen/_37dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_8dp"
            android:background="@drawable/img_default" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_8dp"
            android:layout_toStartOf="@+id/btn_play_or_pause"
            android:layout_toEndOf="@+id/img_single"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title_song"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/avenir_next_ltpro_bold"
                android:text="@string/txt_title_default"
                android:textColor="@color/white"
                android:textSize="@dimen/_13_5sp" />

            <TextView
                android:id="@+id/tv_artist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4dp"
                android:ellipsize="end"
                android:fontFamily="@font/avenirnextltpro_mediumcn"
                android:text="@string/txt_title_default"
                android:textColor="#1DB954"
                android:textSize="@dimen/_10_5sp"
                tools:ignore="SpUsage,TextSizeCheck" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btn_play_or_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_8dp"
            android:layout_marginEnd="@dimen/_8dp"
            android:background="@drawable/ic_pause" />

        <SeekBar
            android:id="@+id/seek_bar_play_music"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_single"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/_8dp"
            android:progress="50" />
    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>